--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,12 @@
+<!DOCTYPE html>
+<html lang="en">
 
+  <head>
+
+    <title>Hackathon</title>
+    </head>
+    
+    <body>
+    <p>Hello World</p>
+    </body>
+    </html>
