--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
+<!DOCTYPE html>
+<html lang="en">
 
+  <head>
+
+    <title>Yes</title>
+  </head>
+  <body>
+    <p>Hello World</p>
+  </body>
+</html>
