--- a/index.html
+++ b/index.html
@@ -10,13 +10,11 @@
   <body>
     <header>
       <a ref="index.html" class="logo">
+           <a class="scroll1" href="#home">Home</a>
+           <a class="scroll2" href="#hours">Service Hours</a>
+           <a class="scroll2" href="#credits">Credits</a>
+           <a class="scroll2" href="#about">About</a>
         
-        <ul class="nav">
-           <li class="scroll-to-section"><a class="scroll1" href="#home">Home</a></li>
-           <li class="scroll-to-section"><a class="scroll2" href="#hours">Service Hours</a></li>
-           <li class="scroll-to-section"><a class="scroll2" href="#credits">Credits</a></li>
-           <li class="scroll-to-section"><a class="scroll2" href="#about">About</a></li>
-        </ul>
     </header>
     
   </body>
