--- a/ServiceHourPage.html
+++ b/ServiceHourPage.html
@@ -1,4 +1,9 @@
 <!DOCTYPE HTML>
+<head>
+  <link rel="stylesheet" href="stylesheet.css">
+  
+</head>  
+body>
 <table>
   <tr>
   <th>Hours Needed</th>
@@ -11,3 +16,4 @@
     <td></td>
   </tr>
 </table>
+</body>
