--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <body>
     <header>
       <a ref="index.html" class="logo">
-           <a class="scroll1" href="#home">Home</a>
+           <a class="scroll1" href="#about">About</a>
            <a class="scroll2" href="#hours">Service Hours</a>
            <a class="scroll2" href="#credits">Credits</a>
-           <a class="scroll2" href="#about">About</a>
+           <a class="scroll2" href="#Home">Home</a>
         
     </header>
     
