--- a/ServiceHourPage.html
+++ b/ServiceHourPage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <head>
   <link rel="stylesheet" href="stylesheet.css">
-  
+  <link rel="java" href="Onevent.js">
 </head>  
 body>
 <table>
