--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
       </head>
     
   <body>
-    <header>
-      <a ref="index.html" class="logo">
+    <header class="navbar">
+           <a ref="index.html" class="logo">
            <a class="scroll1" href="#about">About</a>
            <a class="scroll2" href="Hackathon/hours.html">Service Hours</a>
            <a class="scroll2" href="#credits">Credits</a>
