--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="navbar">
            <a ref="index.html" class="logo">
            <a class="scroll1" href="#about">About</a>
-           <a class="scroll2" href="Hackathon/hours.html">Service Hours</a>
+           <a class="scroll2" href="hours.html">Service Hours</a>
            <a class="scroll2" href="#credits">Credits</a>
            <a class="scroll2" href="#Home">Home</a>
     </header>
