--- a/hours.html
+++ b/hours.html
@@ -19,7 +19,7 @@ row3.innerHTML="New";
 }
   </script>
   
-<table>
+<table class="hourstable">
   <tr>
   <th>Hours Needed</th>
   <th>Hours Completed</th>
