--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
      </tr>
     </table>
     
+    <div class="right">
+      <img src="https://cdn.discordapp.com/attachments/1053111655103463485/1076637354804117544/D8RzCw6A4RLAAAAABJRU5ErkJggg.png" align="right" border="300" width="400" height="400">
+    </div>  
 
     
   </body>
