--- a/hours.html
+++ b/hours.html
@@ -21,7 +21,7 @@
   
 <br>
   
-<button type="button" onclick="myFunction()">Add Row</button>
+<button type="button" onclick="addRow()">Add Row</button>
   
     <script>
     function addRow() {
