--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    
   <body>
   <a href="https://lamjackie.github.io/Hackathon/index.html"><img src ="https://cdn.discordapp.com/attachments/1053111655103463485/1076649139422638171/Tracker_icon.png" width="50" height="70" alth="PATH logo">
-    <table class="nav-table">
+    <table class="nav-table" width="100%">
      <tr>
      <td><a href="https://lamjackie.github.io/Hackathon/index.html">Home</a></td>
      <td><a href="hours.html">Service Hours</a></td>
@@ -18,10 +18,10 @@
      </tr>
     </table>
     
-    <div class="left">
+    <div class="left" float="left">
       <img src="https://cdn.discordapp.com/attachments/1053111655103463485/1076637354804117544/D8RzCw6A4RLAAAAABJRU5ErkJggg.png" border="3" width="400" height="400" alt="bunny planner">
     </div>  
-    <div class="right">
+    <div class="right" float="right">
     <h2>PATH</h2>
     <p>Start tracking your graduation requirements today with PATH!</p>
     </div>
