--- a/hours.html
+++ b/hours.html
@@ -25,16 +25,17 @@
   
     <script>
     function addRow() {
-var tablerow = document.getElementById("Table");
-var row = tablerow.insertrow(-1);
-var row1 = row.insertCell(0);
-var row2 = row.insertCell(1);
-var row3 = row.insertCell(2);
-row1.innerHTML="New";
-row2.innerHTML="New";
-row3.innerHTML="New";
+var table = document.getElementById("Table");
+var row = table.insertrow(-1);
+var cell1 = row.insertCell(0);
+var cell2 = row.insertCell(1);
+var cell3 = row.insertCell(2);
+cell1.innerHTML = "New";
+cell2.innerHTML = "New";
+cell3.innerHTML = "New";
 }
   </script>
-  
+
+</script>
 </body>
 </html>
