--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
      </tr>
     </table>
     
-    <div class="left" float="left">
-      <img src="https://cdn.discordapp.com/attachments/1053111655103463485/1076637354804117544/D8RzCw6A4RLAAAAABJRU5ErkJggg.png" border="3" width="400" height="400" alt="bunny planner">
+    <div class="left">
+      <img src="https://cdn.discordapp.com/attachments/1053111655103463485/1076637354804117544/D8RzCw6A4RLAAAAABJRU5ErkJggg.png" border="3" width="400" height="400" float="left" alt="bunny planner">
     </div>  
-    <div class="right" float="right">
+    <div class="right">
     <h2>PATH</h2>
     <p>Start tracking your graduation requirements today with PATH!</p>
     </div>
