--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </table>
     
     <div>
-      <img src="https://cdn.discordapp.com/attachments/1053111655103463485/1076637354804117544/D8RzCw6A4RLAAAAABJRU5ErkJggg.png" border="3" width="400" height="400" float="left" alt="bunny planner">
+      <img src="https://cdn.discordapp.com/attachments/1053111655103463485/1076637354804117544/D8RzCw6A4RLAAAAABJRU5ErkJggg.png" width="400" height="400" float="left" alt="bunny planner">
     </div>  
     <div>
     <h2 float="right">PATH</h2>
