--- a/hours.html
+++ b/hours.html
@@ -21,20 +21,18 @@
   
 <br>
   
-<button type="button" onclick="addRow()">Add Row</button>
-  
-    <script>
-    function addRow() {
-var table = document.getElementById("Table");
-var row = table.insertrow(-1);
-var cell1 = row.insertCell(0);
-var cell2 = row.insertCell(1);
-var cell3 = row.insertCell(2);
-cell1.innerHTML = "New";
-cell2.innerHTML = "New";
-cell3.innerHTML = "New";
+<button type="button" onclick="myFunction()">Try it</button>
+
+<script>
+function myFunction() {
+  var table = document.getElementById("myTable");
+  var row = table.insertRow(-1);
+  var cell1 = row.insertCell(0);
+  var cell2 = row.insertCell(1);
+  cell1.innerHTML = "NEW CELL1";
+  cell2.innerHTML = "NEW CELL2";
 }
-  </script>
+</script>
 
 </script>
 </body>
