--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>  
     <div>
     <h2 float="right">PATH</h2>
-    <p>Start tracking your graduation requirements today with PATH!</p>
+    <p float="right">Start tracking your graduation requirements today with PATH!</p>
     </div>
   </body>
 </html>
