--- a/hours.html
+++ b/hours.html
@@ -6,7 +6,7 @@
 </head>  
 <body>
   
-<table class="hourstable">
+<table id="hourstable">
   <tr>
   <th>Hours Needed</th>
   <th>Hours Completed</th>
@@ -21,16 +21,18 @@
   
 <br>
   
-<button type="button" onclick="myFunction()">Try it</button>
+<button type="button" onclick="myFunction()">Add Row</button>
 
 <script>
 function myFunction() {
-  var table = document.getElementById("myTable");
+  var table = document.getElementById("hourstable");
   var row = table.insertRow(-1);
-  var cell1 = row.insertCell(0);
-  var cell2 = row.insertCell(1);
+  var cell1 = row.insertCell(1);
+  var cell2 = row.insertCell(2);
+  var cell3 = row.insertCell(3);
   cell1.innerHTML = "NEW CELL1";
   cell2.innerHTML = "NEW CELL2";
+  cell3.innerHTML = "NEW CELL2";
 }
 </script>
 
