--- a/index.html
+++ b/index.html
@@ -27,5 +27,8 @@
     </div>
     <div color="#54D4F0" width="100%" height="300px">
     </div>
+    <h3 class="team-greet">
+      Meet the Team
+    </h3>  
   </body>
 </html>
