--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <h2 float="right">PATH</h2>
     <p float="right">Start tracking your graduation requirements today with PATH!</p>
     </div>
-    <div color="#54D4F0" width="100%" height="300px">
+    <div background-color="#54D4F0" width="100%" height="300px">
     </div>
     <h3 class="team-greet">
       Meet the Team
