--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     
     <title>PATH</title>
     
-    <link rel="stylesheet" href="Hackathon/stylesheet.css">
+    <link rel="stylesheet" href="stylesheet.css">
       </head>
    
   <body>
