--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
     </div>
     <div background-color="#54D4F0" width="100%" height="300px">
     </div>
+    
+    <a href="hours.html" style="text-decoration: none;">Service Hours</a>
+    
     <h3 class="team-greet">
       Meet the Team
     </h3>  
