--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div background-color="#54D4F0" width="100%" height="300px">
     </div>
     
-    <a href="hours.html" style="text-decoration: none;">Service Hours</a>
+    <a href="hours.html" class="hoursbtn" style="text-decoration: none;">Service Hours</a>
     
     <h3 class="team-greet">
       Meet the Team
