--- a/hours.html
+++ b/hours.html
@@ -6,6 +6,16 @@
 </head>  
 <body>
   
+    <table class="nav-table" width="100%">
+     <tr>
+     <td><a href="https://lamjackie.github.io/Hackathon/index.html"><img src ="https://cdn.discordapp.com/attachments/1053111655103463485/1076649139422638171/Tracker_icon.png" width="50" height="70" alt="PATH logo"></a></td>
+     <td><a href="https://lamjackie.github.io/Hackathon/index.html">Home</a></td>
+     <td><a href="hours.html">Service Hours</a></td>
+     <td><a href="#credit">Credits</a></td>
+     <td><a href="#about">About</a></td>
+     </tr>
+    </table>
+  
 <table id="hourstable">
   <tr>
   <th>Hours Needed</th>
