--- a/hours.html
+++ b/hours.html
@@ -16,13 +16,16 @@
      </tr>
     </table>
   
+ <hr>
+ <br>
+  
 <table id="hourstable">
-  <tr>
+  <tr id="hourstable">
   <th>Hours Needed</th>
   <th>Hours Completed</th>
   <th>Description of Service Activity</th>
   </tr>
-  <tr>
+  <tr id="hourstable">
     <td>a</td>
     <td>a</td>
     <td>a</td>
