--- a/index.html
+++ b/index.html
@@ -17,15 +17,18 @@
      <td><a href="#about">About</a></td>
      </tr>
     </table>
-    <div>
-    <h2 float="right">PATH</h2>
-    <p float="right">Start tracking your graduation requirements today with PATH!</p>
+    <div class="right">
+    <h2>PATH</h2>
+    </div>
+    <div class="right2">
+    <p>Start tracking your graduation requirements today with PATH!</p>
     </div>
       <div>
       <img src="https://cdn.discordapp.com/attachments/1053111655103463485/1076637354804117544/D8RzCw6A4RLAAAAABJRU5ErkJggg.png" width="400" height="400" float="left" alt="bunny planner">
        <a href="hours.html" class="hoursbtn" float="right" style="text-decoration: none;">Service Hours</a>
     </div>  
-    <div background-color="#54D4F0" width="100%" height="300px">
+    <div class="color-block">
+      .
     </div>
     <h3 class="team-greet">
       Meet the Team
