--- a/index.html
+++ b/index.html
@@ -28,10 +28,13 @@
        <a href="hours.html" class="hoursbtn" float="right" style="text-decoration: none;">Service Hours</a>
     </div>  
     <div class="color-block">
-      .
+      1
     </div>
     <h3 class="team-greet">
       Meet the Team
-    </h3>  
+    </h3>
+    <div class="color-block">
+      1
+    </div>
   </body>
 </html>
