--- a/hours.html
+++ b/hours.html
@@ -7,8 +7,6 @@
 <body>
   
     <table class="nav-table" width="100%">
-     <tr>
-     <td><a href="https://lamjackie.github.io/Hackathon/index.html"><img src ="https://cdn.discordapp.com/attachments/1053111655103463485/1076649139422638171/Tracker_icon.png" width="50" height="70" alt="PATH logo"></a></td>
      <td><a href="https://lamjackie.github.io/Hackathon/index.html">Home</a></td>
      <td><a href="hours.html">Service Hours</a></td>
      <td><a href="credits.html">Credits</a></td>
@@ -25,15 +23,15 @@
    <br>
   
 <table id="hourstable">
-  <tr id="hourstable">
-  <th>Hours Needed</th>
-  <th>Hours Completed</th>
-  <th>Description of Service Activity</th>
+  <tr id="hourstr">
+  <th id="hoursth">Hours Needed</th>
+  <th id="hourstt">Hours Completed</th>
+  <th id="hoursth">Description of Service Activity</th>
   </tr>
-  <tr id="hourstable">
-    <td>a</td>
-    <td>a</td>
-    <td>a</td>
+  <tr id="hourstr">
+    <td id="hourstd">a</td>
+    <td id="hourstd">a</td>
+    <td id="hourstd">a</td>
   </tr>
 </table>
   
