--- a/hours.html
+++ b/hours.html
@@ -7,10 +7,12 @@
 <body>
   
     <table class="nav-table" width="100%">
-     <td><a href="https://lamjackie.github.io/Hackathon/index.html">Home</a></td>
-     <td><a href="hours.html">Service Hours</a></td>
-     <td><a href="credits.html">Credits</a></td>
-     <td><a href="#about">About</a></td>
+     <tr class="nav-tr" >
+     <td class="nav-td" ><a href="https://lamjackie.github.io/Hackathon/index.html"><img src ="https://cdn.discordapp.com/attachments/1053111655103463485/1076649139422638171/Tracker_icon.png" width="50" height="70" alt="PATH logo"></a></td>
+     <td class="nav-td" ><a href="https://lamjackie.github.io/Hackathon/index.html">Home</a></td>
+     <td class="nav-td" ><a href="https://lamjackie.github.io/Hackathon/hours.html">Service Hours</a></td>
+     <td class="nav-td" ><a href="https://lamjackie.github.io/Hackathon/credits.html">Credits</a></td>
+     <td class="nav-td" ><a href="https://lamjackie.github.io/Hackathon/about.html">About</a></td>
      </tr>
     </table>
   
