--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
        <center><a href="credits.html" class="creditsbtn" style="text-decoration: none;">Grad Credits</a></center>
     </div>  
     <div class="color-block">
-      1
+      Path is the easiest way to track your graduation requirements online!
     </div>
     <h3 class="team-greet">
       Meet the Team
     </h3>
-    <div class="color-block">
+    <div class="color-block2">
       1
     </div>
   </body>
