--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <p>Start tracking your graduation requirements today with PATH!</p>
     </div>
       <div>
-      <img class="bunny" src="https://cdn.discordapp.com/attachments/1053111655103463485/1076637354804117544/D8RzCw6A4RLAAAAABJRU5ErkJggg.png" alt="bunny planner">
-       <center><a href="hours.html" class="hoursbtn" style="text-decoration: none;">Service Hours</a></center>
+      <br><img class="bunny" src="https://cdn.discordapp.com/attachments/1053111655103463485/1076637354804117544/D8RzCw6A4RLAAAAABJRU5ErkJggg.png" alt="bunny planner">
+      <br><center><a href="hours.html" class="hoursbtn" style="text-decoration: none;">Service Hours</a></center>
        <center><a href="credits.html" class="creditsbtn" style="text-decoration: none;">Grad Credits</a></center>
     </div>  
     <div class="color-block">
