--- a/credits.html
+++ b/credits.html
@@ -27,56 +27,56 @@
     <br>
     <br>
     
-    <table id="creditstable">
-      <tr id="creditstable">
+    <table>
+      <tr>
         <th>Credits Req.</th>
         <th>Credits Still Needed</th>
         <th>Credits Finished</th>
         <th>Subject</th>
       </tr>
-      <tr id="creditstable">
+      <tr>
         <td>a</td>
         <td>a</td>
         <td>a</td>
         <td>English</td>
       </tr>
-      <tr id="creditstable">
+      <tr>
         <td>a</td>
         <td>a</td>
         <td>a</td>
         <td>Math</td>
       </tr>
-      <tr id="creditstable">
+      <tr>
         <td>a</td>
         <td>a</td>
         <td>a</td>
         <td>Science</td>
       </tr>
-      <tr id="creditstable">
+      <tr>
         <td>a</td>
         <td>a</td>
         <td>a</td>
         <td>History</td>
       </tr>
-      <tr id="creditstable">
+      <tr>
         <td>a</td>
         <td>a</td>
         <td>a</td>
         <td>Arts</td>
       </tr>
-      <tr id="creditstable">
+      <tr>
         <td>a</td>
         <td>a</td>
         <td>a</td>
         <td>Arts</td>
       </tr>
-      <tr id="creditstable">
+      <tr>
         <td>a</td>
         <td>a</td>
         <td>a</td>
         <td>CTE</td>
       </tr>
-      <tr id="creditstable">
+      <tr>
         <td>a</td>
         <td>a</td>
         <td>a</td>
