--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
      <td class="nav-td" ><a href="#about">About</a></td>
      </tr>
     </table>
-    <div class="right">
-    <h2>PATH</h2>
-    </div>
+    <h2 class="right">PATH</h2>
     <div class="right2">
     <p>Start tracking your graduation requirements today with PATH!</p>
     </div>
@@ -34,6 +32,7 @@
     <h3 class="team-greet">
       Meet the Team
     </h3>
+    
     <div class="color-block2">
       1
     </div>
