--- a/hours.html
+++ b/hours.html
@@ -24,16 +24,16 @@
    <br>
    <br>
   
-<table>
-  <tr>
-  <th>Hours Needed</th>
-  <th>Hours Completed</th>
-  <th>Description of Service Activity</th>
+<table id="hourstable">
+  <tr id="hourstr">
+  <th id="hoursth">Hours Needed</th>
+  <th id="hourstt">Hours Completed</th>
+  <th id="hoursth">Description of Service Activity</th>
   </tr>
-  <tr>
-    <td>a</td>
-    <td>a</td>
-    <td>a</td>
+  <tr id="hourstr">
+    <td id="hourstd">a</td>
+    <td id="hourstd">a</td>
+    <td id="hourstd">a</td>
   </tr>
 </table>
   
