--- a/credits.html
+++ b/credits.html
@@ -28,59 +28,53 @@
     <br>
     
     <table id="creditstable">
-      <tr id="creditstable">
-        <th>Credits Req.</th>
-        <th>Credits Still Needed</th>
-        <th>Credits Finished</th>
-        <th>Subject</th>
+      <tr id="creditstr">
+        <th id="creditssth">Credits Req.</th>
+        <th id="creditsth">Credits Still Needed</th>
+        <th id="creditsth">Credits Finished</th>
+        <th id="creditsth">Subject</th>
       </tr>
-      <tr id="creditstable">
-        <td>a</td>
-        <td>a</td>
-        <td>a</td>
-        <td>English</td>
+      <tr id="creditstr">
+        <td id="creditstd">a</td>
+        <td id="creditstd">a</td>
+        <td id="creditstd">a</td>
+        <td id="creditstd">English</td>
       </tr>
-      <tr id="creditstable">
-        <td>a</td>
-        <td>a</td>
-        <td>a</td>
-        <td>Math</td>
+      <tr id="creditstr">
+        <td id="creditstd">a</td>
+        <td id="creditstd">a</td>
+        <td id="creditstd">a</td>
+        <td id="creditstd">Math</td>
       </tr>
-      <tr id="creditstable">
-        <td>a</td>
-        <td>a</td>
-        <td>a</td>
-        <td>Science</td>
+      <tr id="creditstr">
+        <td id="creditstd">a</td>
+        <td id="creditstd">a</td>
+        <td id="creditstd">a</td>
+        <td id="creditstd">Science</td>
       </tr>
-      <tr id="creditstable">
-        <td>a</td>
-        <td>a</td>
-        <td>a</td>
-        <td>History</td>
+      <tr id="creditstr">
+        <td id="creditstd">a</td>
+        <td id="creditstd">a</td>
+        <td id="creditstd">a</td>
+        <td id="creditstd">History</td>
       </tr>
-      <tr id="creditstable">
-        <td>a</td>
-        <td>a</td>
-        <td>a</td>
-        <td>Arts</td>
+      <tr id="creditstr">
+        <td id="creditstd">a</td>
+        <td id="creditstd">a</td>
+        <td id="creditstd">a</td>
+        <td id="creditstd">Arts</td>
       </tr>
-      <tr id="creditstable">
-        <td>a</td>
-        <td>a</td>
-        <td>a</td>
-        <td>Arts</td>
+      <tr id="creditstr">
+        <td id="creditstd">a</td>
+        <td id="creditstd">a</td>
+        <td id="creditstd">a</td>
+        <td id="creditstd">CTE</td>
       </tr>
-      <tr id="creditstable">
-        <td>a</td>
-        <td>a</td>
-        <td>a</td>
-        <td>CTE</td>
-      </tr>
-      <tr id="creditstable">
-        <td>a</td>
-        <td>a</td>
-        <td>a</td>
-        <td>PE</td>
+      <tr id="creditstr">
+        <td id="creditstd">a</td>
+        <td id="creditstd">a</td>
+        <td id="creditstd">a</td>
+        <td id="creditstd">PE</td>
       </tr>
     </table>
     
