--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    
+ <head>
     <title>PATH</title>
-    
     <link rel="stylesheet" href="stylesheet.css">
-      </head>
+  </head>
    
   <body>
     <table class="nav-table" width="100%">
@@ -17,37 +15,18 @@
      <td class="nav-td" ><a href="#about">About</a></td>
      </tr>
     </table>
-    </br>
-    </br>
-    </br>
-    <h2 class="right">PATH</h2>
-    <div class="right2">
-    <p>Start tracking your graduation requirements today with PATH!</p>
-    </div>
-      <div>
-      <br><img class="bunny" src="https://cdn.discordapp.com/attachments/1053111655103463485/1076637354804117544/D8RzCw6A4RLAAAAABJRU5ErkJggg.png" width="400" height="400" alt="bunny planner">
+    <h2>PATH</h2>
+    <p class="right2">Start tracking your graduation requirements today with PATH!</p>
+      <img class="bunny" src="https://cdn.discordapp.com/attachments/1053111655103463485/1076637354804117544/D8RzCw6A4RLAAAAABJRU5ErkJggg.png" width="400" height="400" alt="bunny planner">
       <br><center><a href="hours.html" class="hoursbtn" style="text-decoration: none;">Service Hours</a></center>
        <center><a href="credits.html" class="creditsbtn" style="text-decoration: none;">Grad Credits</a></center>
-    </div>  
-    </br>
-    </br>
-    </br>
+    </div> 
     <div class="color-block">
       Path is the easiest way to track your graduation requirements online!
     </div>
-    </br>
-    </br>
     <h3 class="team-greet">
       Meet the Team
     </h3>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
     <div class="color-block2">
       1
     </div>
