--- a/index.html
+++ b/index.html
@@ -15,9 +15,15 @@
      <td class="nav-td" ><a href="#about">About</a></td>
      </tr>
     </table>
-    <h2>PATH</h2>
-    <p class="right2">Start tracking your graduation requirements today with PATH!</p>
-      <img class="bunny" src="https://cdn.discordapp.com/attachments/1053111655103463485/1076637354804117544/D8RzCw6A4RLAAAAABJRU5ErkJggg.png" width="400" height="400" alt="bunny planner">
+    <table style="width:100%; align-item:center;">
+     <tr>
+     <th><img class="bunny" src="https://cdn.discordapp.com/attachments/1053111655103463485/1076637354804117544/D8RzCw6A4RLAAAAABJRU5ErkJggg.png" width="400" height="400" alt="bunny planner"></th>
+     <th>
+     <th><h2>PATH</h2></br>
+     <p>Start tracking your graduation requirements today with PATH!</p>
+     </th>
+     </tr>
+    </table>
       <a href="hours.html" class="hoursbtn" style="text-decoration: none; text-alignment: right;">Service Hours</a>
        <center><a href="credits.html" class="creditsbtn" style="text-decoration: none;">Grad Credits</a></center>
     </div> 
