--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
      <tr>
      <th><img class="bunny" src="https://cdn.discordapp.com/attachments/1053111655103463485/1076637354804117544/D8RzCw6A4RLAAAAABJRU5ErkJggg.png" width="400" height="400" alt="bunny planner"></th>
      <th>
-     <th><h2>PATH</h2></br>
+     <th><h2>PATH</h2>
      <p>Start tracking your graduation requirements today with PATH!</p>
      </th>
      </tr>
