--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
      <th>
      <th><h2>PATH</h2>
      <p>Start tracking your graduation requirements today with PATH!</p>
+     <a href="hours.html" class="hoursbtn" style="text-decoration: none; text-alignment: right;">Service Hours</a>
+     <a href="credits.html" class="creditsbtn" style="text-decoration: none;">Grad Credits</a>
      </th>
      </tr>
     </table>
-      <a href="hours.html" class="hoursbtn" style="text-decoration: none; text-alignment: right;">Service Hours</a>
-       <center><a href="credits.html" class="creditsbtn" style="text-decoration: none;">Grad Credits</a></center>
     </div> 
     <div class="color-block">
       Path is the easiest way to track your graduation requirements online!
