--- a/index.html
+++ b/index.html
@@ -26,12 +26,13 @@
      </th>
      </tr>
     </table>
-    <table>
+    <table style="width:100%; align-items:center;">
      <tr>
       <th><div class="color-block">
       Path is the easiest way to track your graduation requirements online!
       </div></th>
      </tr>
+     </table>
     <h3 class="team-greet">
       Meet the Team
     </h3>
