--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
  <head>
     <title>PATH</title>
     <link rel="stylesheet" href="stylesheet.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;500;700&family=Inter:wght@300;400&display=swap" rel="stylesheet">
   </head>
    
   <body>
