--- a/index.html
+++ b/index.html
@@ -39,11 +39,21 @@
     <h3 class="team-greet">
       Meet the Team
     </h3>
-    <table style="width:100%; align-items:center;">
+    <table style="width:100%; align-items:center; text-align:center;">
      <tr>
       <th><img src="https://images.unsplash.com/photo-1602491453631-e2a5ad90a131?crop=entropy&cs=tinysrgb&fm=jpg&ixid=Mnw3MjAxN3wwfDF8c2VhcmNofDN8fGFuaW1hbHxlbnwwfHx8fDE2NzY3NDQxMjI&ixlib=rb-4.0.3&q=80&q=85&fmt=jpg&crop=entropy&cs=tinysrgb&w=450" width="230" height="216" style="border-radius:100%;"></th>
       <th><img src="https://images.unsplash.com/photo-1467811884194-ae868cd3f090?crop=entropy&cs=tinysrgb&fm=jpg&ixid=Mnw3MjAxN3wwfDF8c2VhcmNofDE2fHxvd2x8ZW58MHx8fHwxNjc2ODMwMDc0&ixlib=rb-4.0.3&q=80&q=85&fmt=jpg&crop=entropy&cs=tinysrgb&w=450" width="230" height="216" style="border-radius:100%;"></th>
       <th><img src="https://images.unsplash.com/photo-1484406566174-9da000fda645?crop=entropy&cs=tinysrgb&fm=jpg&ixid=Mnw3MjAxN3wwfDF8c2VhcmNofDR8fGFuaW1hbHxlbnwwfHx8fDE2NzY3NDQxMjI&ixlib=rb-4.0.3&q=80&q=85&fmt=jpg&crop=entropy&cs=tinysrgb&w=450" width="230" height="216" style="border-radius:100%;"></th>
+     </tr>
+     <tr>
+      <td>Jackie</td>
+      <td>Angela</td>
+      <td>XinTong</td>
+     </tr>
+     <tr>
+      <td>Angela is currently a high school student..</td>
+      <td>Angela is currently a high school student..</td>
+      <td>Angela is currently a high school student..</td>
      </tr>
     </table>
     <div class="color-block2">
