--- a/credits.html
+++ b/credits.html
@@ -36,45 +36,45 @@
         <th id="creditsth">Subject</th>
       </tr>
       <tr id="creditstr">
-        <td id="creditstd"><input type="text" id="credreq" credreq="credreq"></td>
-        <td id="creditstd"><input type="text" id="credneed" credneed="credneed"></td>
-        <td id="creditstd"><input type="text" id="credfin" credfin="credfin"></td>
+        <td id="creditstd"><input type="number" id="credreq" credreq="credreq"></td>
+        <td id="creditstd"><input type="number" id="credneed" credneed="credneed"></td>
+        <td id="creditstd"><input type="number" id="credfin" credfin="credfin"></td>
         <td id="creditstd">English</td>
       </tr>
       <tr id="creditstr">
-        <td id="creditstd"><input type="text" id="credreq" credreq="credreq"></td>
-        <td id="creditstd"><input type="text" id="credneed" credneed="credneed"></td>
-        <td id="creditstd"><input type="text" id="credfin" credfin="credfin"></td>
+        <td id="creditstd"><input type="number" id="credreq" credreq="credreq"></td>
+        <td id="creditstd"><input type="number" id="credneed" credneed="credneed"></td>
+        <td id="creditstd"><input type="number" id="credfin" credfin="credfin"></td>
         <td id="creditstd">Math</td>
       </tr>
       <tr id="creditstr">
-        <td id="creditstd"><input type="text" id="credreq" credreq="credreq"></td>
-        <td id="creditstd"><input type="text" id="credneed" credneed="credneed"></td>
-        <td id="creditstd"><input type="text" id="credfin" credfin="credfin"></td>
+        <td id="creditstd"><input type="number" id="credreq" credreq="credreq"></td>
+        <td id="creditstd"><input type="number" id="credneed" credneed="credneed"></td>
+        <td id="creditstd"><input type="number" id="credfin" credfin="credfin"></td>
         <td id="creditstd">Science</td>
       </tr>
       <tr id="creditstr">
-        <td id="creditstd"><input type="text" id="credreq" credreq="credreq"></td>
-        <td id="creditstd"><input type="text" id="credneed" credneed="credneed"></td>
-        <td id="creditstd"><input type="text" id="credfin" credfin="credfin"></td>
+        <td id="creditstd"><input type="number" id="credreq" credreq="credreq"></td>
+        <td id="creditstd"><input type="number" id="credneed" credneed="credneed"></td>
+        <td id="creditstd"><input type="number" id="credfin" credfin="credfin"></td>
         <td id="creditstd">History</td>
       </tr>
       <tr id="creditstr">
-        <td id="creditstd"><input type="text" id="credreq" credreq="credreq"></td>
-        <td id="creditstd"><input type="text" id="credneed" credneed="credneed"></td>
-        <td id="creditstd"><input type="text" id="credfin" credfin="credfin"></td>
+        <td id="creditstd"><input type="number" id="credreq" credreq="credreq"></td>
+        <td id="creditstd"><input type="number" id="credneed" credneed="credneed"></td>
+        <td id="creditstd"><input type="number" id="credfin" credfin="credfin"></td>
         <td id="creditstd">Arts</td>
       </tr>
       <tr id="creditstr">
-        <td id="creditstd"><input type="text" id="credreq" credreq="credreq"></td>
-        <td id="creditstd"><input type="text" id="credneed" credneed="credneed"></td>
-        <td id="creditstd"><input type="text" id="credfin" credfin="credfin"></td>
+        <td id="creditstd"><input type="number" id="credreq" credreq="credreq"></td>
+        <td id="creditstd"><input type="number" id="credneed" credneed="credneed"></td>
+        <td id="creditstd"><input type="number" id="credfin" credfin="credfin"></td>
         <td id="creditstd">CTE</td>
       </tr>
       <tr id="creditstr">
-        <td id="creditstd"><input type="text" id="credreq" credreq="credreq"></td>
-        <td id="creditstd"><input type="text" id="credneed" credneed="credneed"></td>
-        <td id="creditstd"><input type="text" id="credfin" credfin="credfin"></td>
+        <td id="creditstd"><input type="number" id="credreq" credreq="credreq"></td>
+        <td id="creditstd"><input type="number" id="credneed" credneed="credneed"></td>
+        <td id="creditstd"><input type="number" id="credfin" credfin="credfin"></td>
         <td id="creditstd">PE</td>
       </tr>
     </table>
