--- a/credits.html
+++ b/credits.html
@@ -91,10 +91,18 @@ function myFunction() {
   var cell2 = row.insertCell(1);
   var cell3 = row.insertCell(2);
   var cell4 = row.insertCell(3);
-  cell1.innerHTML = document.getElementById("credreq");
-  cell2.innerHTML = document.getElementById("credneed");
-  cell3.innerHTML = document.getElementById("credfin");
-  cell4.innerHTML = document.getElementById("subject");
+  cell1.innerHTML = const input = document.createElement("input");
+                    input.setAttribute("type", "text");
+                    document.body.appendChild(input);
+  cell2.innerHTML = const input = document.createElement("input");
+                    input.setAttribute("type", "text");
+                    document.body.appendChild(input);
+  cell3.innerHTML = const input = document.createElement("input");
+                    input.setAttribute("type", "text");
+                    document.body.appendChild(input);
+  cell4.innerHTML = const input = document.createElement("input");
+                    input.setAttribute("type", "text");
+                    document.body.appendChild(input);
 }
 </script>
     
