--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
       <th><img src="https://images.unsplash.com/photo-1484406566174-9da000fda645?crop=entropy&cs=tinysrgb&fm=jpg&ixid=Mnw3MjAxN3wwfDF8c2VhcmNofDR8fGFuaW1hbHxlbnwwfHx8fDE2NzY3NDQxMjI&ixlib=rb-4.0.3&q=80&q=85&fmt=jpg&crop=entropy&cs=tinysrgb&w=450" width="230" height="216" style="border-radius:100%; box-sizing: border-box;"></th>
      </tr>
      <tr>
-      <td>Jackie</td>
-      <td>Angela</td>
-      <td>XinTong</td>
+      <td class="team-td">Jackie</td>
+      <td class="team-td">Angela</td>
+      <td class="team-td">XinTong</td>
      </tr>
      <tr>
-      <td>Angela is currently a high school student..</td>
-      <td>Angela is currently a high school student..</td>
-      <td>Angela is currently a high school student..</td>
+      <td class="team-td2">Angela is currently a high school student..</td>
+      <td class="team-td2">Angela is currently a high school student..</td>
+      <td class="team-td2">Angela is currently a high school student..</td>
      </tr>
     </table>
     <div class="color-block2">
