--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
  <head>
     <title>PATH</title>
+    <link rel="icon" href="https://media.discordapp.net/attachments/1053111655103463485/1076649139422638171/Tracker_icon.png">
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -53,11 +54,13 @@
       <th><div><img src="https://images.unsplash.com/photo-1467811884194-ae868cd3f090?crop=entropy&cs=tinysrgb&fm=jpg&ixid=Mnw3MjAxN3wwfDF8c2VhcmNofDE2fHxvd2x8ZW58MHx8fHwxNjc2ODMwMDc0&ixlib=rb-4.0.3&q=80&q=85&fmt=jpg&crop=entropy&cs=tinysrgb&w=450" width="100%" height="auto" style="border-radius:50%; box-sizing: border-box;"></th></div>
       <th><div><img src="https://images.unsplash.com/photo-1484406566174-9da000fda645?crop=entropy&cs=tinysrgb&fm=jpg&ixid=Mnw3MjAxN3wwfDF8c2VhcmNofDR8fGFuaW1hbHxlbnwwfHx8fDE2NzY3NDQxMjI&ixlib=rb-4.0.3&q=80&q=85&fmt=jpg&crop=entropy&cs=tinysrgb&w=450" width="100%" height="auto" style="border-radius:50%; box-sizing: border-box;"></th></div>
      </tr>
+    </br>
      <tr>
       <td class="team-td">Jackie</td>
       <td class="team-td">Angela</td>
       <td class="team-td">XinTong</td>
      </tr>
+    </br>
      <tr>
       <td class="team-td2">Angela is currently a high school student..</td>
       <td class="team-td2">Angela is currently a high school student..</td>
