--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@
     </br>
     </br>
     </br>
-    <h3 class="team-greet">
-      Meet the Team
-    </h3>
+    <th><h3 class="team-greet">
+    Meet the Team </h3></th>
+    </tr>
+    </table>
     </br>
     </br>
     <table style="width:100%; align-items:center; text-align:center;">
@@ -69,6 +70,14 @@
       <td class="team-td2">Angela is currently a high school student..</td>
      </tr>
     </table>
+    </br>
+    </br>
+    </br>
+    </br>
+    </br>
+    </br>
+    </br>
+    </br>
     <div class="color-block2">
       1
     </div>
