--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
      <th><img class="bunny" src="https://cdn.discordapp.com/attachments/1053111655103463485/1076637354804117544/D8RzCw6A4RLAAAAABJRU5ErkJggg.png" width="400" height="400" alt="bunny planner"></th>
      <th>
      <th><h2>PATH</h2>
-     <p>Start tracking your graduation requirements today with PATH!</p>
+     <p class="Path">Start tracking your graduation requirements today with PATH!</p>
      <a href="hours.html" class="hoursbtn" style="text-decoration: none; text-alignment: right;">Service Hours</a>
      <a href="credits.html" class="creditsbtn" style="text-decoration: none;">Grad Credits</a>
      </th>
@@ -33,7 +33,7 @@
     <table style="width:100%; align-items:center;">
      <tr>
       <th><div class="color-block">
-      Path is the easiest way to track your graduation requirements online!
+      <p>Path is the easiest way to track your graduation requirements online!</p>
       </div></th>
      </tr>
     </table>
