--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
   <body>
     <table class="nav-table" width="100%">
      <tr class="nav-tr" >
-     <td class="nav-td" ><a href="https://lamjackie.github.io/Hackathon/index.html"><img src ="https://cdn.discordapp.com/attachments/1053111655103463485/1076931074300596264/path_dev_post_icon.jpg" width="70" height="50" alt="PATH logo"></a></td>
-     <td class="nav-td" ><a href="https://lamjackie.github.io/Hackathon/index.html">Home</a></td>
-     <td class="nav-td" ><a href="https://lamjackie.github.io/Hackathon/hours.html">Service Hours</a></td>
-     <td class="nav-td" ><a href="https://lamjackie.github.io/Hackathon/credits.html">Credits</a></td>
+     <td class="nav-td" ><a href="https://lamjackie.github.io/Hackathon/index.html" style="text-decoration: none;" ><img src ="https://cdn.discordapp.com/attachments/1053111655103463485/1076931074300596264/path_dev_post_icon.jpg" width="70" height="50" alt="PATH logo"></a></td>
+     <td class="nav-td" ><a href="https://lamjackie.github.io/Hackathon/index.html" style="text-decoration: none;" >Home</a></td>
+     <td class="nav-td" ><a href="https://lamjackie.github.io/Hackathon/hours.html" style="text-decoration: none;" >Service Hours</a></td>
+     <td class="nav-td" ><a href="https://lamjackie.github.io/Hackathon/credits.html" style="text-decoration: none;" >Credits</a></td>
      <td class="nav-td" ><a href="#about">About</a></td>
-     </tr>
+     </tr>style="text-decoration: none;" 
     </table>
     <table style="width:100%; align-item:center;">
      <tr>
