--- a/credits.html
+++ b/credits.html
@@ -83,6 +83,8 @@
     
 <button type="button" onclick="myFunction()">Add Row</button>
 
+
+
 <script>
 function myFunction() {
   var table = document.getElementById("creditstable");
@@ -91,18 +93,13 @@ function myFunction() {
   var cell2 = row.insertCell(1);
   var cell3 = row.insertCell(2);
   var cell4 = row.insertCell(3);
-  cell1.innerHTML = const input = document.createElement("input");
-                    input.setAttribute("type", "text");
-                    document.body.appendChild(input);
-  cell2.innerHTML = const input = document.createElement("input");
-                    input.setAttribute("type", "text");
-                    document.body.appendChild(input);
-  cell3.innerHTML = const input = document.createElement("input");
-                    input.setAttribute("type", "text");
-                    document.body.appendChild(input);
-  cell4.innerHTML = const input = document.createElement("input");
-                    input.setAttribute("type", "text");
-                    document.body.appendChild(input);
+  cell1.innerHTML = const input = document.createElement("input").value;
+
+  cell2.innerHTML = const input = document.createElement("input").value;
+
+  cell3.innerHTML = const input = document.createElement("input").value;
+
+  cell4.innerHTML = const input = document.createElement("input").value;
 }
 </script>
     
