--- a/credits.html
+++ b/credits.html
@@ -81,7 +81,7 @@
     
 <br>
     
-<button type="button" onclick="myFunction()">Add Row</button>
+<button type="button" onclick="myFunction();<script/>">Add Row</button>
 
 
 
