--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <body>
     <table class="nav-table" width="100%">
      <tr class="nav-tr" >
-     <td class="nav-td" ><a href="https://lamjackie.github.io/Hackathon/index.html" style="text-decoration: none;" ><img src ="https://cdn.discordapp.com/attachments/1053111655103463485/1076931074300596264/path_dev_post_icon.jpg" width="70" height="50" alt="PATH logo"></a></td>
-     <td class="nav-td" ><a href="https://lamjackie.github.io/Hackathon/index.html" style="text-decoration: none;" >Home</a></td>
-     <td class="nav-td" ><a href="https://lamjackie.github.io/Hackathon/hours.html" style="text-decoration: none;" >Service Hours</a></td>
-     <td class="nav-td" ><a href="https://lamjackie.github.io/Hackathon/credits.html" style="text-decoration: none;" >Credits</a></td>
-     <td class="nav-td" ><a href="#about" style="text-decoration: none;" >About</a></td>
+     <td class="nav-td" ><a class="one" href="https://lamjackie.github.io/Hackathon/index.html" style="text-decoration: none;" ><img src ="https://cdn.discordapp.com/attachments/1053111655103463485/1076931074300596264/path_dev_post_icon.jpg" width="70" height="50" alt="PATH logo"></a></td>
+     <td class="nav-td" ><a class="one" href="https://lamjackie.github.io/Hackathon/index.html" style="text-decoration: none;" >Home</a></td>
+     <td class="nav-td" ><a class="one" href="https://lamjackie.github.io/Hackathon/hours.html" style="text-decoration: none;" >Service Hours</a></td>
+     <td class="nav-td" ><a class="one" href="https://lamjackie.github.io/Hackathon/credits.html" style="text-decoration: none;" >Credits</a></td>
+     <td class="nav-td" ><a class="one" href="#about" style="text-decoration: none;" >About</a></td>
      </tr> 
     </table>
     <table style="width:100%; align-item:center;">
@@ -52,23 +52,19 @@
     </br>
     <table style="width:100%; align-items:center; text-align:center;">
      <tr>
-      <th><div><img src="https://images.unsplash.com/photo-1602491453631-e2a5ad90a131?crop=entropy&cs=tinysrgb&fm=jpg&ixid=Mnw3MjAxN3wwfDF8c2VhcmNofDN8fGFuaW1hbHxlbnwwfHx8fDE2NzY3NDQxMjI&ixlib=rb-4.0.3&q=80&q=85&fmt=jpg&crop=entropy&cs=tinysrgb&w=450" width="280" height="280" style="object-fit: cover; border-radius:50%; box-sizing: border-box;"></th></div>
-      <th><div><img src="https://images.unsplash.com/photo-1467811884194-ae868cd3f090?crop=entropy&cs=tinysrgb&fm=jpg&ixid=Mnw3MjAxN3wwfDF8c2VhcmNofDE2fHxvd2x8ZW58MHx8fHwxNjc2ODMwMDc0&ixlib=rb-4.0.3&q=80&q=85&fmt=jpg&crop=entropy&cs=tinysrgb&w=450" width="280" height="280" style="object-fit: cover; border-radius:50%; box-sizing: border-box;"></th></div>
-      <th><div><img src="https://images.unsplash.com/photo-1484406566174-9da000fda645?crop=entropy&cs=tinysrgb&fm=jpg&ixid=Mnw3MjAxN3wwfDF8c2VhcmNofDR8fGFuaW1hbHxlbnwwfHx8fDE2NzY3NDQxMjI&ixlib=rb-4.0.3&q=80&q=85&fmt=jpg&crop=entropy&cs=tinysrgb&w=450" width="280" height="280" style="object-fit: cover; border-radius:50%; box-sizing: border-box;"></th></div>
+      <th><div><img src="https://images.unsplash.com/photo-1602491453631-e2a5ad90a131?crop=entropy&cs=tinysrgb&fm=jpg&ixid=Mnw3MjAxN3wwfDF8c2VhcmNofDN8fGFuaW1hbHxlbnwwfHx8fDE2NzY3NDQxMjI&ixlib=rb-4.0.3&q=80&q=85&fmt=jpg&crop=entropy&cs=tinysrgb&w=450" width="250" height="250" style="object-fit: cover; border-radius:50%; box-sizing: border-box;"></th></div>
+      <th><div><img class="owl" src="https://images.unsplash.com/photo-1467811884194-ae868cd3f090?crop=entropy&cs=tinysrgb&fm=jpg&ixid=Mnw3MjAxN3wwfDF8c2VhcmNofDE2fHxvd2x8ZW58MHx8fHwxNjc2ODMwMDc0&ixlib=rb-4.0.3&q=80&q=85&fmt=jpg&crop=entropy&cs=tinysrgb&w=450" width="250" height="250" style="object-fit: cover; border-radius:50%; box-sizing: border-box;"></th></div>
+      <th><div><img src="https://images.unsplash.com/photo-1484406566174-9da000fda645?crop=entropy&cs=tinysrgb&fm=jpg&ixid=Mnw3MjAxN3wwfDF8c2VhcmNofDR8fGFuaW1hbHxlbnwwfHx8fDE2NzY3NDQxMjI&ixlib=rb-4.0.3&q=80&q=85&fmt=jpg&crop=entropy&cs=tinysrgb&w=450" width="250" height="250" style="object-fit: cover; border-radius:50%; box-sizing: border-box;"></th></div>
      </tr>
-    </br>
-    </br>
      <tr>
-      <td class="team-td">Jackie</td>
-      <td class="team-td">Angela</td>
-      <td class="team-td">XinTong</td>
+     </br><td class="team-td">Jackie</td>
+     </br><td class="team-td">Angela</td>
+     </br><td class="team-td">XinTong</td>
      </tr>
-    </br>
-    </br>
      <tr>
-      <td class="team-td2">Angela is currently a high school student..</td>
-      <td class="team-td2">Angela is currently a high school student..</td>
-      <td class="team-td2">Angela is currently a high school student..</td>
+     </br><td class="team-td2">Angela is currently a high school student..</td>
+     </br><td class="team-td2">Angela is currently a high school student..</td>
+     </br><td class="team-td2">Angela is currently a high school student..</td>
      </tr>
     </table>
     </br>
