--- a/hours.html
+++ b/hours.html
@@ -6,14 +6,14 @@
 </head>  
 <body>
   
-    <table class="nav-table" width="100%">
+     <table class="nav-table" width="100%">
      <tr class="nav-tr" >
-     <td class="nav-td" ><a href="https://lamjackie.github.io/Hackathon/index.html"><img src ="https://cdn.discordapp.com/attachments/1053111655103463485/1076649139422638171/Tracker_icon.png" width="50" height="70" alt="PATH logo"></a></td>
-     <td class="nav-td" ><a href="https://lamjackie.github.io/Hackathon/index.html">Home</a></td>
-     <td class="nav-td" ><a href="https://lamjackie.github.io/Hackathon/hours.html">Service Hours</a></td>
-     <td class="nav-td" ><a href="https://lamjackie.github.io/Hackathon/credits.html">Credits</a></td>
-     <td class="nav-td" ><a href="https://lamjackie.github.io/Hackathon/about.html">About</a></td>
-     </tr>
+     <td class="nav-td" ><a class="one" href="https://lamjackie.github.io/Hackathon/index.html" style="text-decoration: none;" ><img src ="https://cdn.discordapp.com/attachments/1053111655103463485/1076931074300596264/path_dev_post_icon.jpg" width="70" height="50" alt="PATH logo"></a></td>
+     <td class="nav-td" ><a class="one" href="https://lamjackie.github.io/Hackathon/index.html" style="text-decoration: none;" >Home</a></td>
+     <td class="nav-td" ><a class="one" href="https://lamjackie.github.io/Hackathon/hours.html" style="text-decoration: none;" >Service Hours</a></td>
+     <td class="nav-td" ><a class="one" href="https://lamjackie.github.io/Hackathon/credits.html" style="text-decoration: none;" >Credits</a></td>
+     <td class="nav-td" ><a class="one" href="#about" style="text-decoration: none;" >About</a></td>
+     </tr> 
     </table>
   
    <br>
