--- a/credits.html
+++ b/credits.html
@@ -30,7 +30,7 @@
     
     <table id="creditstable">
       <tr id="creditstr">
-        <th id="creditssth">Credits Req.</th>
+        <th id="creditsth">Credits Req.</th>
         <th id="creditsth">Credits Still Needed</th>
         <th id="creditsth">Credits Finished</th>
         <th id="creditsth">Subject</th>
