--- a/credits.html
+++ b/credits.html
@@ -15,7 +15,7 @@
      <td class="nav-td" ><a class="one" href="https://lamjackie.github.io/Hackathon/index.html" style="text-decoration: none;" >Home</a></td>
      <td class="nav-td" ><a class="one" href="https://lamjackie.github.io/Hackathon/hours.html" style="text-decoration: none;" >Service Hours</a></td>
      <td class="nav-td" ><a class="one" href="https://lamjackie.github.io/Hackathon/credits.html" style="text-decoration: none;" >Credits</a></td>
-     <td class="nav-td" ><a class="one" href="#about" style="text-decoration: none;" >About</a></td>
+     <td class="nav-td" ><a class="one" href="https://lamjackie.github.io/Hackathon/about.html" style="text-decoration: none;" >About</a></td>
      </tr> 
     </table>
     
