--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
   </head>
    
   <body>
-    <table class="nav-table" width="100%">
+    <table class="nav-table" width="100%" style="text-align:center">
      <tr class="nav-tr" >
      <td class="nav-td" ><a class="one" href="https://lamjackie.github.io/Hackathon/index.html" style="text-decoration: none;" ><img src ="https://cdn.discordapp.com/attachments/1053111655103463485/1076931074300596264/path_dev_post_icon.jpg" width="100" height="80" alt="PATH logo"></a></td>
      <td class="nav-td" ><a class="one" href="https://lamjackie.github.io/Hackathon/index.html" style="text-decoration: none;" >Home</a></td>
      <td class="nav-td" ><a class="one" href="https://lamjackie.github.io/Hackathon/hours.html" style="text-decoration: none;" >Service Hours</a></td>
      <td class="nav-td" ><a class="one" href="https://lamjackie.github.io/Hackathon/credits.html" style="text-decoration: none;" >Credits</a></td>
-     <td class="nav-td" ><a class="one" href="#about" style="text-decoration: none;" >About</a></td>
+     <td class="nav-td" ><a class="one" href="https://lamjackie.github.io/Hackathon/about.html" style="text-decoration: none;" >About</a></td>
      </tr> 
     </table>
+   
     <table style="width:100%; align-item:center;">
      <tr>
      <th><img class="bunny" src="https://cdn.discordapp.com/attachments/1053111655103463485/1076637354804117544/D8RzCw6A4RLAAAAABJRU5ErkJggg.png" width="400" height="400" alt="bunny planner"></th>
