--- a/hours.html
+++ b/hours.html
@@ -6,7 +6,7 @@
 </head>  
 <body>
   
-     <table class="nav-table" width="100%" style="text-align:center">
+     <table class="nav-table" width="100%">
      <tr class="nav-tr" >
      <td class="nav-td" ><a class="one" href="https://lamjackie.github.io/Hackathon/index.html" style="text-decoration: none;" ><img src ="https://cdn.discordapp.com/attachments/1053111655103463485/1076931074300596264/path_dev_post_icon.jpg" width="100" height="80" alt="PATH logo"></a></td>
      <td class="nav-td" ><a class="one" href="https://lamjackie.github.io/Hackathon/index.html" style="text-decoration: none;" >Home</a></td>
