--- a/credits.html
+++ b/credits.html
@@ -128,6 +128,15 @@ body.appendChild(button);
   document.getElementById("output7").innerHTML = credneeden
 });
 </script>
+ 
+    <p id="output"></p>
+    <p id="output2"></p>
+    <p id="output3"></p>
+    <p id="output4"></p>
+    <p id="output5"></p>
+    <p id="output6"></p>
+    <p id="output7"></p>
+    
     
 <button type="button" onclick="myFunction">Add Row</button>
 
