--- a/credits.html
+++ b/credits.html
@@ -125,7 +125,7 @@ body.appendChild(button);
   document.getElementById("credneedhi").innerHTML = credneedhi
   document.getElementById("credneedar").innerHTML = credneedar
   document.getElementById("credneedct").innerHTML = credneedct
-  document.getElementById("credneedpe").innerHTML = credneeden
+  document.getElementById("credneedpe").innerHTML = credneedpe
 });
 </script>
     
