--- a/hours.html
+++ b/hours.html
@@ -30,9 +30,9 @@
   <th id="hoursth">Description of Service Activity</th>
   </tr>
   <tr id="hourstr">
-    <td id="hourstd"><imput type="number" id="hourneed" hourneed="hourneed"></td>
-    <td id="hourstd"><input type="number" id="hourcomp" hourcomp="hourcomp"></td>
-    <td id="hourstd"><input type="text" id="hourdesc" hourdesc="hourdesc"></td>
+    <td id="hourstd"><input type="number" id="hourneed" hourneed="hourneed"/></td>
+    <td id="hourstd"><input type="number" id="hourcomp" hourcomp="hourcomp"/></td>
+    <td id="hourstd"><input type="text" id="hourdesc" hourdesc="hourdesc"/></td>
   </tr>
 </table>
   
